주석 내용 변경